--- a/Jeni-Ben/index.html
+++ b/Jeni-Ben/index.html
@@ -6,13 +6,14 @@
     <meta name="description" content="Contact page for Matt Wojo and Mimi Gim">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <!-- <link rel="stylesheet" href="css/base.css"> -->
-    <link rel="stylesheet" href="css/layout.css">
+    <!--<link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/m-header.css">
     <link rel="stylesheet" href="css/m-nav.css">
     <link rel="stylesheet" href="css/m-contact.css">
     <link rel="stylesheet" href="css/m-socialmedia.css">
     <link rel="stylesheet" href="css/m-footer.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/responsive.css">-->
+    <link rel="stylesheet" href="style/app.css">
   </head>
   <body>
     <main class="main-wrapper">
