--- a/Jeni-Ben/index.html
+++ b/Jeni-Ben/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style/app.css">
   </head>
   <body>
-    <main class="main-wrapper">
+    <main>
       <header>
         <div class="grid_4 alpha">
           <h1 class="page-heading">contact us</h1>
@@ -22,32 +22,34 @@
           </ul>
         </nav>
       </header>
-      <section class="m-contact grid_8 alpha">
-        <h1 class="m-contact-title">Say Hello!</h1>
-        <p>We would love to hear from you.</p>
-        <form action="" class="m-contact-form" method="post">
-          <input type="text" name="name" class="m-contact-form--name" placeholder="name"/>
-          <input type="email" name="email" class="m-contact-form--email" placeholder="email"/>
-          <textarea rows=15 cols=80 class="m-contact-form--comment" placeholder="comment"></textarea>
-          <button class="m-contact-form--btn">submit</button>
+      <section class="grid_8 alpha">
+        <h1>Say Hello!</h1>
+        <form action="" method="post">
+          <fieldset>
+            <legend>We would love to hear from you.</legend>
+              <input type="text" name="name" placeholder="name"/>
+              <input type="email" name="email" placeholder="email"/>
+              <textarea rows=15 cols=80 placeholder="comment"></textarea>
+          </fieldset>
+          <button>submit</button>
         </form>
       </section>
       <section class="grid_4 omega">
         <h1>Social Media</h1>
         <figure>
-          <figcaption class="m-name">Matt Wojo</figcaption>
-          <img src="img/matt.jpg" class="m-socialmedia" alt="matt picture">
+          <figcaption class="name">Matt Wojo</figcaption>
+          <img src="img/matt.jpg" class="socialmedia" alt="matt picture">
         </figure>
-        <a href="https://github.com/mattwojo"><img src="img/github.svg" class="m-socialmedia"/></a>
-        <a href="https://linkedin.com/"><img src="img/linkedin.svg" class="m-socialmedia"/></a>
-        <a href="https://twitter.com/"><img src="img/twitter.svg" class="m-socialmedia"/></a>
+        <a href="https://github.com/mattwojo"><img src="img/github.svg" class="socialmedia"/></a>
+        <a href="https://linkedin.com/"><img src="img/linkedin.svg" class="socialmedia"/></a>
+        <a href="https://twitter.com/"><img src="img/twitter.svg" class="socialmedia"/></a>
         <figure>
-          <figcaption class="m-name">Mimi Gim</figcaption>
-          <img src="img/mimi.jpg" class="m-socialmedia" alt="mimi picture">
+          <figcaption class="name">Mimi Gim</figcaption>
+          <img src="img/mimi.jpg" class="socialmedia" alt="mimi picture">
         </figure>
-        <a href="https://github.com/mimigim"><img src="img/github.svg" class="m-socialmedia" /></a>
-        <a href="https://linkedin.com/"><img src="img/linkedin.svg" class="m-socialmedia" /></a>
-        <a href="https://twitter.com/"><img src="img/twitter.svg" class="m-socialmedia" /></a>
+        <a href="https://github.com/mimigim"><img src="img/github.svg" class="socialmedia" /></a>
+        <a href="https://linkedin.com/"><img src="img/linkedin.svg" class="socialmedia" /></a>
+        <a href="https://twitter.com/"><img src="img/twitter.svg" class="socialmedia" /></a>
       </section>
       <footer class="grid_12">
         <ul class="footer-location">
