--- a/Jeni-Ben/index.html
+++ b/Jeni-Ben/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style/app.css">
   </head>
   <body>
-    <main>
+    <main class="wrapper">
       <header>
         <div class="grid_4 alpha">
           <h1 class="page-heading">contact us</h1>
